Update buildscript, apply spotless (#175)